Noen sonar forbedringer.